# ComputationalFinanceCoursework

./: CMakeLists.txt  Main.cpp  README.md
data-visualization/: DataVisualisation.ipynb  results_python.csv
include/: Algorithm.h  AssetCharacteristics.h  Backtest.h  CsvReader.h  Matrix.h  PortfolioSolver.h
latex/: main.tex  titlepage.tex
src/: Algorithm.cpp  AssetCharacteristics.cpp  Backtest.cpp  CsvReader.cpp  Matrix.cpp  PortfolioSolver.cpp
